# test-agent-harness

./: .dockerignore  .gitignore  Dockerfile  README.md  bank_reconciliation.md  config.py  daily_cash_report.md  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements.txt  runtime.py  semantic.py  sessions.py
skills/: variance_analysis.md
src/: chat_cli.py  config.py  observability.py  server.py
src/agent/: compaction.py  context.py  runtime.py
src/agent/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  stub_provider.py
src/cache/: backends.py  manager.py
src/datasources/: base.py  clickhouse_source.py  duckdb_source.py  postgres_source.py  registry.py  trino_source.py
src/db/: database.py  load_banking_dataset.py  load_excel_ledgers.py  seed.py  tasks_store.py
src/memory/: activity.py  consolidate.py  semantic.py  skills.py
src/static/: app.js  index.html  rum.js  style.css
src/tools/: __init__.py  base.py  query.py
tests/: conftest.py  test_agent_loop.py  test_api.py  test_cache.py  test_compaction.py  test_datasources.py  test_tools.py
